[project]
name = "smart-routing"
version = "0.1.0"
description = "POC for smart routing between workers"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "worker",
]

[tool.uv.sources]
worker = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/*",
]
exclude = [
    "packages/dispatcher",
    "packages/log-collector",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.8",
]

[tool.ruff]
line-length = 80
indent-width = 4
exclude = [
    "venv",
    ".venv",
    "**/.ipynb_checkpoints",
]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"
line-ending = "lf"
